# miniR

./: .RData  .Rhistory  .gitattributes  .gitignore  .markdownlint.jsonc  2026-03-19-003043-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  CLAUDE.md  Cargo.toml  DONE.md  LICENSE  MAINTAINERS.md  README.md  TODO.md  build.rs  cfuncs.mod  cran-packages.toml  cran-target-packages.txt  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
analysis/: cran-corpus-scan.md  crates-io-overview.csv  rd-parser-crate-survey.md  vendor-crate-audit.md
csrc/: native_trampoline.c
datasets/: README.md  manifest.tsv
datasets/data/: abalone.csv  auto_mpg.csv
datasets/man/: abalone.Rd  auto_mpg.Rd  breast_cancer_wisconsin_diagnostic.Rd  example-datasets.Rd  iris.Rd  penguins.Rd  wine.Rd
doc/: README.md
doc/html/katex/: README.md
doc/notes/: README.md  bcstkprot.md  immbnd.md
docs/: README.md  backtraces.md  divergences.md  graphics_devices.md  hdf5_sparse.c  hdf5_sparse.rs  hdf5_summary.md  native_runtime.md  package_runtime.md
include/miniR/: R.h  Rconfig.h  Rdefines.h  Rinterface.h  Rinternals.h  Rmath.h  Rversion.h  minir_runtime.c
include/miniR/R_ext/: Altrep.h  Applic.h  Arith.h  BLAS.h  Boolean.h  Complex.h  Connections.h  Constants.h  Error.h  GraphicsDevice.h  GraphicsEngine.h  Lapack.h  Linpack.h  Memory.h  Parse.h  Print.h  RS.h  Random.h  Rdynload.h  Utils.h  Visibility.h  eventloop.h  libextern.h
minir-macros/: Cargo.toml
minir-macros/src/: lib.rs
newr-macros/: Cargo.toml
newr-macros/src/: lib.rs
plans/: README.md  aho-corasick-memchr.md  approx.md  architecture-modularity.md  arrow-backend.md  arrow.md  binary-serialization.md  bstr.md  call-stack.md  chrono.md  conditions.md  crates-io-audit.md  crossterm.md  csv.md  ctrlc.md  dependencies.md  dirs.md  dotdot-zero-error.md  egui-graphics.md  error-messages.md  exn.md  fnv.md  fromargs-design.md  fromargs-migration.md  gc-arena.md  globset.md  grammar-rewrite.md  grid-graphics.md  implementation-plan.md  indexmap.md  indicatif.md  interpreter-discoveries.md  interpreter-roadmap.md  io-feature-gate.md  itertools.md  jiff.md  lexopt.md  linkme-wasm.md  log-simplelog.md  magrittr-pipes.md  (+54 more)
plans/done/: aho-corasick-memchr.md  aho-corasick-optimization.md  architecture-remediation.md  blake3.md  bstr.md  chacha20.md  crossterm.md  csv.md  egui-table-view.md  error-messages.md  exn.md  feature-gates.md  flate2.md  glob.md  interpreter-discoveries.md  interpreter-roadmap.md  libm.md  magrittr-pipes.md  module-error-types.md  multipart-rs.md  nalgebra.md  nu-ansi-term.md  num-complex.md  num-traits.md  rand.md  rustdoc-to-rd.md  rustls.md  serde-json.md  serde.md  signal-hook.md  slotmap.md  stacktrace.md  tabwriter.md  terminal-size.md  thiserror.md  toml-edit.md  tracing.md  vendor-patches.md  winresource.md
reviews/: 2026-03-15-project-review.md  2026-03-23-plans-review.md  2026-03-23-project-review.md  builtin-audit-2026-03-17.md  cran-native-loading-2026-03-27.md  cran-package-sourcing-2026-03-19.md  full-verification-2026-03-18.md  graphics-device-gaps.md  native-audit-2026-03-27.md  parser-newline-continuation.md  rd-corpus-failures.txt  rlang-r-abort-hang.md  session-2026-03-27-native-code.md  session-2026-04-01.md  session-issues-2026-03-19.md  trycatch-recursion-bug.md
scripts/: README.md  audit-cran-packages.sh  docs-to-site.sh  filter-crates-io.py  fix-vendor-checksum.sh  parse-test.sh  update-datasets.sh
share/: README.md
site/: config.toml
site/content/: _index.md  architecture.md  backtraces.md  cran.md  divergences.md  ecosystem.md  extending.md  getting-started.md  graphics-devices.md  help-system.md  interpreter.md  linkme-registry.md  native-runtime.md  native.md  object-systems.md  package-runtime.md  parser-and-diagnostics.md  reentrant-runtime.md  session-api.md  wasm-support.md
site/content/manual/: _index.md  backtraces.md  divergences.md  graphics-devices.md  hdf5-summary.md  native-runtime.md  package-runtime.md
site/public/: index.html  robots.txt  search_index.en.js  sitemap.xml
site/public/architecture/: index.html
site/public/backtraces/: index.html
site/public/cran/: index.html
site/public/divergences/: index.html
site/public/ecosystem/: index.html
site/public/extending/: index.html
site/public/getting-started/: index.html
site/public/graphics-devices/: index.html
site/public/native/: index.html
site/public/native-runtime/: index.html
site/public/object-systems/: index.html
site/public/package-runtime/: index.html
site/sass/: _base.scss  _docs.scss  _hero.scss  _nav.scss  _search.scss  site.scss
site/static/: search.js
site/static/css/: style.css
site/templates/: base.html  index.html  page.html  section.html
src/: README.md  interpreter.rs  lib.rs  main.rs  parser.rs  repl.rs  session.rs
src/interpreter/: arguments.rs  assignment.rs  builtins.rs  call.rs  call_eval.rs  coerce.rs  control_flow.rs  environment.rs  graphics.rs  grid.rs  indexing.rs  mod.rs  native.rs  ops.rs  packages.rs  s3.rs  value.rs
src/interpreter/builtins/: args.rs  coercion.rs  collections.rs  conditions.rs  connections.rs  grid.rs  (+26 more)
src/parser/: ast.rs  builder.rs  diagnostics.rs  literals.rs  mod.rs  r.pest
src/repl/: completer.rs  highlighter.rs  prompt.rs  validator.rs
tests/: README.md  all_equal.rs  apply_family.rs  argument_matching.rs  as_vector.rs  binary_rds.rs  bind_dimnames.rs  bstr_encoding.rs  bugfix_2026_03_18.rs  bugfix_2026_03_25.rs  builtin_args.rs  builtin_correctness.rs  call_stack.rs  captured_output.rs  coercion.rs  collections.rs  colnames.rs  color_output.rs  color_palettes.rs  complex_basic.R  conditions.R  conditions.rs  cran_load_parallel.rs  cran_source_corpus.rs  data_frame.rs  dataframe.R  dataframe_ops.rs  diagnostics.rs  digest.rs  dim.rs  dimnames.rs  distributions.rs  dotdot.R  env_builtins.rs  env_scope_builtins.rs  environments.R  expand_grid.rs  ext_distributions.rs  factor_table.rs  fail_fast.R  (+91 more)
tests/native_stacktrace/: run.sh  test.c
tools/: README.md
vendor-patches/: README.md
(+38 files in other folders)
