[workspace]
members = ["minir-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"

[package]
name = "r"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [
    "cran/",
    ".cargo/",
    "doc/",
    "docs/",
    "plans/",
    "scripts/",
    "share/",
    "tests/",
    "tools/",
]

[dependencies]
minir-macros = { path = "minir-macros" }
derive_more = { version = "2.1", features = [
    "deref",
    "deref_mut",
    "from",
    "into",
    "constructor",
    # "add",            # derive Add trait (operator +)
    # "add_assign",     # derive AddAssign trait (operator +=)
    # "as_ref",         # derive AsRef / AsMut traits
    # "debug",          # derive Debug with custom format strings
    "display",          # derive Display with format strings
    # "eq",             # derive Eq / PartialEq traits
    "error",            # derive Error trait (like thiserror)
    # "from_str",       # derive FromStr trait
    # "index",          # derive Index trait (operator [])
    # "index_mut",      # derive IndexMut trait (operator []=)
    # "into_iterator",  # derive IntoIterator trait
    # "is_variant",     # derive is_variant() methods for enums
    # "mul",            # derive Mul trait (operator *)
    # "mul_assign",     # derive MulAssign trait (operator *=)
    # "not",            # derive Not trait (operator !)
    # "sum",            # derive Sum trait
    # "try_from",       # derive TryFrom trait
    # "try_into",       # derive TryInto trait
    # "try_unwrap",     # derive try_unwrap() methods for enums
    # "unwrap",         # derive unwrap() methods for enums
] }
indexmap = "2"
linkme = "0.3"
ndarray = { version = "0.17", optional = true }
csv = { version = "1.4", optional = true }
itertools = "0.14.0"
regex = "1"
tabled = { version = "0.20", optional = true, default-features = false, features = ["std"] }
pest = "2.8"
pest_derive = "2.8"
rand = { version = "0.10.0", optional = true, default-features = false, features = ["std", "thread_rng"] }
rand_distr = { version = "0.6.0", optional = true, default-features = false, features = ["std"] }
rayon = { version = "1", optional = true }
nu-ansi-term = "0.50"
reedline = { version = "0.46" }
temp-dir = "0.2.0"
glob = "0.3"
num-complex = "0.4"
libm = "0.2"
signal-hook = { version = "0.4.3", optional = true, default-features = false }
tabwriter = { version = "1", optional = true }
unicode-segmentation = "1"
unicode-width = "0.2"
unicase = "2"
jiff = { version = "0.2", optional = true, default-features = false, features = ["std", "tz-system", "tzdb-bundle-platform", "tzdb-zoneinfo"] }
sha2 = { version = "0.10", optional = true }
dirs = { version = "6", optional = true }
walkdir = { version = "2", optional = true }
globset = { version = "0.4", optional = true, default-features = false }
serde_json = {version = "1", optional = true}
slotmap = { version = "1.0", optional = true }
bstr = "1"
log = "0.4"
env_logger = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
rustls-native-certs = { version = "0.8", optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
default = ["random", "datetime", "io", "collections", "digest", "json", "dirs-support", "walkdir-support", "globset-support", "linalg", "tables", "signal", "toml", "arena"]

logging = ["dep:env_logger"]
toml_edit = {version = "0.22", optional = true}

random = ["dep:rand", "dep:rand_distr"]
datetime = ["dep:jiff"]
io = ["dep:csv"]
collections = []
digest = ["dep:sha2"]
json = ["dep:serde_json"]
toml = ["dep:toml_edit"]
linalg = ["dep:ndarray"]
tables = ["dep:tabled", "dep:tabwriter"]
signal = ["dep:signal-hook"]
dirs-support = ["dep:dirs"]
walkdir-support = ["dep:walkdir"]
globset-support = ["dep:globset"]
arena = ["dep:slotmap"]
tls = ["dep:rustls", "dep:rustls-native-certs", "dep:webpki-roots"]
parallel = ["dep:rayon"]
