[workspace]
members = ["minir-macros"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[package]
name = "r"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [
    "cran/",
    ".cargo/",
    "doc/",
    "docs/",
    "plans/",
    "scripts/",
    "share/",
    "tests/",
    "tools/",
]

[dependencies]
minir-macros = { path = "minir-macros" }
derive_more = { version = "2.1", features = [
    "deref",
    "deref_mut",
    "from",
    "into",
    "constructor",
    # "add",            # derive Add trait (operator +)
    # "add_assign",     # derive AddAssign trait (operator +=)
    # "as_ref",         # derive AsRef / AsMut traits
    # "debug",          # derive Debug with custom format strings
    "display",          # derive Display with format strings
    # "eq",             # derive Eq / PartialEq traits
    "error",            # derive Error trait (like thiserror)
    # "from_str",       # derive FromStr trait
    # "index",          # derive Index trait (operator [])
    # "index_mut",      # derive IndexMut trait (operator []=)
    # "into_iterator",  # derive IntoIterator trait
    # "is_variant",     # derive is_variant() methods for enums
    # "mul",            # derive Mul trait (operator *)
    # "mul_assign",     # derive MulAssign trait (operator *=)
    # "not",            # derive Not trait (operator !)
    # "sum",            # derive Sum trait
    # "try_from",       # derive TryFrom trait
    # "try_into",       # derive TryInto trait
    # "try_unwrap",     # derive try_unwrap() methods for enums
    # "unwrap",         # derive unwrap() methods for enums
] }
aho-corasick = "1"
arrow-array = "58"
arrow-buffer = "58"
fnv = "1"
indexmap = "2"
linkme = "0.3"
memchr = "2"
nalgebra = { version = "0.34", optional = true, default-features = false, features = ["std"] }
ndarray = { version = "0.17", optional = true }
csv = { version = "1.4", optional = true }
itertools = "0.14.0"
regex = "1"
base64 = "0.22"
tabled = { version = "0.20", optional = true, default-features = false, features = ["std"] }
pest = "2.8"
pest_derive = "2.8"
rand = { version = "0.10.0", optional = true, default-features = false, features = ["std", "thread_rng"] }
rand_chacha = { version = "0.10", optional = true }
rand_distr = { version = "0.6.0", optional = true, default-features = false, features = ["std"] }
rayon = { version = "1", optional = true }
nu-ansi-term = { version = "0.50", optional = true }
reedline = { version = "0.46", optional = true }
temp-dir = "0.2.0"
glob = "0.3"
num-complex = "0.4"
smallvec = { version = "1", features = ["union"] }
libm = "0.2"
signal-hook = { version = "0.4.3", optional = true, default-features = false }
tabwriter = { version = "1", optional = true }
unicode-segmentation = "1"
unicode-width = "0.2"
unicase = "2"
jiff = { version = "0.2", optional = true, default-features = false, features = ["std", "tz-system", "tzdb-bundle-platform", "tzdb-zoneinfo"] }
sha2 = { version = "0.10", optional = true }
crc32fast = { version = "1", optional = true }
blake3 = { version = "1", optional = true }
dirs = { version = "6", optional = true }
walkdir = { version = "2", optional = true }
globset = { version = "0.4", optional = true, default-features = false }
serde_json = {version = "1", optional = true}
toml_edit = {version = "0.22", optional = true}
miette = { version = "7", features = ["fancy-no-backtrace"], optional = true }
slotmap = { version = "1.0", optional = true }
bytecount = { version = "0.6", optional = true }
bstr = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
# env_logger removed — tracing-subscriber handles all logging
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
rustls-native-certs = { version = "0.8", optional = true }
webpki-roots = { version = "0.26", optional = true }
flate2 = { version = "1", optional = true }
bzip2 = { version = "0.5", optional = true }
textwrap = { version = "0.16", default-features = false }
indicatif = { version = "0.17", optional = true }
crossterm = { version = "0.29", optional = true }
terminal_size = { version = "0.4", optional = true }
parquet = { version = "58", optional = true, default-features = false, features = ["arrow"] }
arrow = { version = "58", optional = true, default-features = false, features = ["csv", "json"] }
zmij = { version = "1", optional = true }
# termcolor removed — using crossterm for colored output (already a dep via repl)
eframe = { version = "0.33", optional = true, default-features = false, features = ["glow", "default_fonts", "persistence"] }
serde = { version = "1", features = ["derive"], optional = true }
winit = { version = "0.30", optional = true, default-features = false }
egui = { version = "0.33", optional = true }
egui_plot = { version = "0.34", optional = true }
egui_table = { version = "0.7", optional = true }
svg = { version = "0.18", optional = true }
krilla = { version = "0.6", optional = true }
krilla-svg = { version = "0.3", optional = true }
usvg = { version = "0.45", optional = true }
rfd = { version = "0.15", optional = true, default-features = false, features = ["xdg-portal"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "bmp"] }
resvg = { version = "0.45", optional = true }
tiny-skia = { version = "0.11", optional = true }
libloading = { version = "0.8", optional = true }
cc = { version = "1", optional = true, features = ["parallel"] }
pkg-config = { version = "0.3", optional = true }
addr2line = { version = "0.24", optional = true, default-features = false, features = ["std"] }
gimli = { version = "0.31", optional = true, default-features = false, features = ["read", "std"] }
object = { version = "0.36", optional = true, default-features = false, features = ["read", "std"] }

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[features]
# Full build — everything enabled. This is what CI tests.
full = ["default", "tls", "linalg", "gui", "svg-device", "raster-device", "pdf-device", "parquet", "native"]

# Default — a practical everyday build without the heaviest deps.
# Saves ~15s CPU / ~5s wall vs full by excluding tls (ring+rustls) and linalg (nalgebra+ndarray).
default = ["repl", "random", "datetime", "io", "collections", "digest", "blake3", "json", "dirs-support", "walkdir-support", "globset-support", "tables", "signal", "toml", "diagnostics", "arena", "compression", "tracing-output", "progress", "parallel", "bytecount", "terminal-size", "fast-format", "svg-device", "raster-device", "native"]

# Minimal — just the core interpreter + parser. No optional deps at all.
# Fastest possible build (~5s). Good for parser work, AST changes, WASM targets.
# Usage: cargo build --no-default-features --features minimal
minimal = []

# Fast — core + the most-used features, skipping heavy compile-time deps.
# Adds random, datetime, io, compression on top of minimal.
# Usage: cargo build --no-default-features --features fast
fast = ["random", "datetime", "io", "compression", "diagnostics", "signal", "terminal-size", "fast-format", "native"]

tracing-output = ["dep:tracing-subscriber"]
repl = ["dep:reedline", "dep:nu-ansi-term", "dep:crossterm"]

diagnostics = ["dep:miette"]
random = ["dep:rand", "dep:rand_chacha", "dep:rand_distr"]
datetime = ["dep:jiff"]
io = ["dep:csv"]
collections = []
digest = ["dep:sha2", "dep:crc32fast"]
blake3 = ["dep:blake3"]
json = ["dep:serde_json"]
toml = ["dep:toml_edit"]
linalg = ["dep:ndarray", "dep:nalgebra"]
tables = ["dep:tabled", "dep:tabwriter"]
signal = ["dep:signal-hook"]
dirs-support = ["dep:dirs"]
walkdir-support = ["dep:walkdir"]
globset-support = ["dep:globset"]
arena = ["dep:slotmap"]
tls = ["dep:rustls", "dep:rustls-native-certs", "dep:webpki-roots"]
bytecount = ["dep:bytecount"]
compression = ["dep:flate2", "dep:bzip2"]
terminal-size = ["dep:terminal_size"]
progress = ["dep:indicatif"]
parallel = ["dep:rayon"]
fast-format = ["dep:zmij"]
# color feature removed — crossterm (via repl) handles colored output
svg-device = ["dep:svg"]
raster-device = ["dep:resvg", "dep:tiny-skia", "dep:usvg", "dep:image", "svg-device"]
pdf-device = ["dep:krilla", "dep:krilla-svg", "dep:usvg", "svg-device"]
plot = ["dep:eframe", "dep:egui", "dep:egui_plot", "dep:winit", "dep:serde", "dep:rfd", "dep:image", "dep:resvg", "dep:tiny-skia"]
view = ["plot", "dep:egui_table"]
gui = ["plot", "view"]
parquet = ["dep:parquet", "dep:arrow"]
native = ["dep:libloading", "dep:cc", "dep:pkg-config", "dep:addr2line", "dep:gimli", "dep:object"]
